--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -22,7 +22,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -47,28 +49,19 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0     5.7\n",
-       "1    75.2\n",
-       "2    74.4\n",
-       "3    84.0\n",
-       "4    66.5\n",
-       "5    66.3\n",
-       "6    55.8\n",
-       "7    75.7\n",
-       "8    29.1\n",
-       "9    43.7\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<PandasArray>\n",
+      "[5.7, 75.2, 74.4, 84.0, 66.5, 66.3, 55.8, 75.7, 29.1, 43.7]\n",
+      "Length: 10, dtype: float64\n"
+     ]
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "a = pd.array(lst)\n",
+    "print(a)"
    ]
   },
   {
@@ -97,7 +90,8 @@
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "a[2]"
    ]
   },
   {
@@ -129,9 +123,143 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>78.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61.3</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>87.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.6</td>\n",
+       "      <td>73.2</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>91.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>69.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>35.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>31.8</td>\n",
+       "      <td>89.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>23.3</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>26.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>27.6</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>53.8</td>\n",
+       "      <td>88.8</td>\n",
+       "      <td>68.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>96.6</td>\n",
+       "      <td>96.4</td>\n",
+       "      <td>53.4</td>\n",
+       "      <td>72.4</td>\n",
+       "      <td>50.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>73.7</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>43.2</td>\n",
+       "      <td>81.6</td>\n",
+       "      <td>34.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0     1     2     3     4\n",
+       "0  53.1  95.0  67.5  35.0  78.4\n",
+       "1  61.3  40.8  30.8  37.8  87.6\n",
+       "2  20.6  73.2  44.2  14.6  91.8\n",
+       "3  57.4   0.1  96.1   4.2  69.5\n",
+       "4  83.6  20.5  85.4  22.8  35.9\n",
+       "5  49.0  69.0   0.1  31.8  89.1\n",
+       "6  23.3  40.7  95.0  83.8  26.9\n",
+       "7  27.6  26.4  53.8  88.8  68.5\n",
+       "8  96.6  96.4  53.4  72.4  50.1\n",
+       "9  73.7  39.0  43.2  81.6  34.7"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b_ = pd.DataFrame(b)\n",
+    "b_"
    ]
   },
   {
@@ -152,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -282,13 +410,16 @@
        "9     73.7     39.0     43.2     81.6     34.7"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here:\n",
+    "\n",
+    "b_.columns = colnames\n",
+    "b_"
    ]
   },
   {
@@ -300,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -408,13 +539,14 @@
        "9     73.7     43.2     34.7"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "b_[[\"Score_1\", \"Score_3\", \"Score_5\"]]"
    ]
   },
   {
@@ -426,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -435,13 +567,15 @@
        "56.95000000000001"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "b_mean = b_[\"Score_3\"].mean()\n",
+    "b_mean"
    ]
   },
   {
@@ -453,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -462,13 +596,15 @@
        "88.8"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "score_4_max = b_[\"Score_4\"].max()\n",
+    "score_4_max"
    ]
   },
   {
@@ -480,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -489,13 +625,15 @@
        "40.75"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "score_2_median = b_[\"Score_2\"].median()\n",
+    "score_2_median"
    ]
   },
   {
@@ -507,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -647,13 +785,15 @@
        "9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "orders_ = pd.DataFrame(orders)\n",
+    "orders_"
    ]
   },
   {
@@ -665,20 +805,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total quantity is: 2978\n",
-      "Total Revenue is: 637.0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2978"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "sum_quantity = orders_[\"Quantity\"].sum()\n",
+    "sum_quantity\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "637.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_revenue = orders_[\"Revenue\"].sum()\n",
+    "sum_revenue"
    ]
   },
   {
@@ -690,50 +856,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prices for the most expansive items ordered:\n",
-      " 0     1.65\n",
-      "2     1.65\n",
-      "7     4.95\n",
-      "6    11.95\n",
-      "Name: UnitPrice, dtype: float64 \n",
-      "\n",
-      "\n",
-      "Prices for the least expansive items ordered:\n",
-      " 3    0.18\n",
-      "8    0.19\n",
-      "1    0.55\n",
-      "5    0.85\n",
-      "Name: UnitPrice, dtype: float64 \n",
-      "\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3     0.18\n",
+       "8     0.19\n",
+       "1     0.55\n",
+       "5     0.85\n",
+       "4     1.25\n",
+       "9     1.25\n",
+       "0     1.65\n",
+       "2     1.65\n",
+       "7     4.95\n",
+       "6    11.95\n",
+       "Name: UnitPrice, dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "items = orders_.sort_values(\"UnitPrice\")\n",
+    "items[\"UnitPrice\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expansive = orders_[\"UnitPrice\"][orders_[\"UnitPrice\"]>orders_[\"UnitPrice\"].median()].sort_values()\n",
+    "cheap = orders_[\"UnitPrice\"][orders_[\"UnitPrice\"]<orders_[\"UnitPrice\"].median()].sort_values()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The difference between the most expansive and least expansive : [ 1.47  1.46  4.4  11.1 ]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([ 1.47,  1.46,  4.4 , 11.1 ])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.asarray(expansive) - cheap.to_numpy()"
+   ]
   },
   {
    "cell_type": "code",
@@ -759,7 +940,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
